# SB100

./: .bash_history  .gitconfig  .gitignore  .wget-hsts  README.md  info_tailscale_bkp  package-lock.json
.pm2/: pm2.pid  touch
cloudfare/: config.yml
leo_Squad2/: requirements.txt  requirements_lock.txt
sb100_web/: Dockerfile  docker-compose.yml  entrypoint.sh  flow.py
squad1/: # File Tree: squad1.md  .bash_history  .dockerignore  .gitconfig  .gitignore  Dockerfile.combined  PROJECT_DEPENDENCIES.md  README.md  WORKFLOW.md  busca_dados.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  nginx.conf  package-lock.json  package.json
squad2/: .bash_history  (+2 more)
squad2/2024-LLM-Agronomo-Virtual/: config_uv.txt  pyproject.toml
squad2/2024-LLM-Agronomo-Virtual/1 - criação_base/: citrusrt-35-2-85.csv  citrusrt-35-2-85.json  docling_mark_json.ipynb  llama_parse.ipynb  tesseract_docling_ocr.ipynb
squad2/2024-LLM-Agronomo-Virtual/1 - criação_base/pasta_raspagem_teste/: recorte_paginas.ipynb  visualizador_docs.ipynb
squad2/2024-LLM-Agronomo-Virtual/1 - criação_base/pasta_raspagem_teste/pasta_raspagem_ocr/: fitz_extrator_texto_ocr.ipynb
squad2/2024-LLM-Agronomo-Virtual/4 - questoes_bot/: documento_perguntas_respostas_bot.xlsx
squad2/2024-LLM-Agronomo-Virtual/Textos e Apresentações/: Comparação LLM - Dirceu 2.pptx  Comparação LLM - Dirceu.pptx  Template_Relato-de-experiencia_MD_2025-1_Dirceu.docx  Template_Resumo-expandido_MIDTI_2025-Dirceu.docx  template-apresentacao-encontromonitoria2025-1-Dirceu.pptx  texto.docx
(+214 files in other folders)
