[project]
name = "2024-llm-agronomo-virtual"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py[cv]>=1.0.0",
    "docling>=2.15.1",
    "fits>=0.0.1",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "ipykernel>=6.29.5",
    "llama-parse>=0.5.20",
    "logging>=0.4.9.6",
    "maker>=1.3.0",
    "marker>=2.1.3",
    "marker-pdf>=1.3.3",
    "matplotlib>=3.10.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.60.1",
    "opencv-python>=4.11.0.86",
    "paddleocr>=2.9.1",
    "paddlepaddle>=2.6.2",
    "paddlepaddle-gpu>=2.6.2",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pillow>=10.4.0",
    "pygame>=2.6.1",
    "pymupdf>=1.25.2",
    "pymupdf4llm>=0.0.17",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "pytest>=8.3.4",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.42.4",
]

[tool.uv.workspace]
members = ["2024-LLM-Agronomo-Virtual"]
